--- a/app/src/main/res/layout/fragment_giao_dich.xml
+++ b/app/src/main/res/layout/fragment_giao_dich.xml
@@ -29,7 +29,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="16dp"
-        android:gravity="center_vertical"
+        android:gravity="center|center_vertical"
+        android:text="0"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -56,7 +57,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="48dp"
         android:layout_marginEnd="16dp"
-        android:gravity="center_vertical"
+        android:gravity="center|center_vertical"
+        android:text="0"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/spinnerThang"
@@ -78,7 +80,7 @@
         android:layout_width="115dp"
         android:layout_height="50dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="63dp"
+        android:layout_marginTop="60dp"
         android:text="Tổng tiền mua vé trong năm"
         android:textColor="@color/cardview_dark_background"
         android:textSize="16sp"
