--- a/app/src/main/res/layout/activity_thong_tin_giao_dich.xml
+++ b/app/src/main/res/layout/activity_thong_tin_giao_dich.xml
@@ -48,7 +48,6 @@
         android:layout_marginStart="156dp"
         android:layout_marginTop="20dp"
         android:gravity="center"
-        android:text="160000"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -74,7 +73,6 @@
         android:layout_marginStart="156dp"
         android:layout_marginTop="20dp"
         android:gravity="center"
-        android:text="2"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.992"
@@ -99,7 +97,6 @@
         android:layout_marginStart="156dp"
         android:layout_marginTop="20dp"
         android:gravity="center"
-        android:text="A1; A2"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.978"
@@ -135,7 +132,6 @@
         android:layout_marginStart="156dp"
         android:layout_marginTop="20dp"
         android:gravity="center"
-        android:text="1"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -159,7 +155,6 @@
         android:layout_height="45dp"
         android:layout_marginTop="20dp"
         android:gravity="center"
-        android:text="17:00"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -172,7 +167,6 @@
         android:layout_height="45dp"
         android:layout_marginTop="20dp"
         android:gravity="center"
-        android:text="ONE PIECE"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -185,7 +179,7 @@
         android:layout_height="45dp"
         android:layout_marginTop="28dp"
         android:gravity="center"
-        android:text="CINEMA"
+        android:text="CINEMAX"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.944"
