--- a/app/src/main/res/layout/fragment_giao_dich.xml
+++ b/app/src/main/res/layout/fragment_giao_dich.xml
@@ -31,6 +31,7 @@
         android:layout_marginEnd="16dp"
         android:gravity="center|center_vertical"
         android:text="0"
+        android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -59,6 +60,7 @@
         android:layout_marginEnd="16dp"
         android:gravity="center|center_vertical"
         android:text="0"
+        android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/spinnerThang"
