--- a/app/src/main/res/layout/fragment_thong_tin_nguoi_dung.xml
+++ b/app/src/main/res/layout/fragment_thong_tin_nguoi_dung.xml
@@ -120,6 +120,7 @@
                     android:layout_marginTop="24dp"
                     android:layout_marginEnd="16dp"
                     android:gravity="center_vertical"
+                    android:textColor="@color/black"
                     android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/textView3"
@@ -131,6 +132,7 @@
                     android:layout_height="35sp"
                     android:layout_marginTop="16dp"
                     android:gravity="center_vertical"
+                    android:textColor="@color/black"
                     android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="@+id/txtEmailTT"
                     app:layout_constraintStart_toStartOf="@+id/txtEmailTT"
@@ -142,6 +144,7 @@
                     android:layout_height="35sp"
                     android:layout_marginTop="16dp"
                     android:gravity="center_vertical"
+                    android:textColor="@color/black"
                     android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="@+id/txtSDTTT"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -151,9 +154,10 @@
                 <TextView
                     android:id="@+id/txtDiaChiTT"
                     android:layout_width="0dp"
-                    android:layout_height="35sp"
+                    android:layout_height="40sp"
                     android:layout_marginTop="16dp"
                     android:gravity="center_vertical"
+                    android:textColor="@color/black"
                     android:textSize="16sp"
                     app:layout_constraintEnd_toEndOf="@+id/txtNgaySinhTT"
                     app:layout_constraintStart_toStartOf="@+id/txtNgaySinhTT"
