--- a/app/src/main/res/layout/fragment_tim_phim.xml
+++ b/app/src/main/res/layout/fragment_tim_phim.xml
@@ -40,6 +40,7 @@
             android:layout_marginTop="16dp"
 
             android:ems="10"
+            android:enabled="false"
             android:hint="Tên Phim"
             android:inputType="textPersonName"
             app:layout_constraintStart_toStartOf="parent"
