--- a/app/src/main/res/layout/fragment_giao_dich.xml
+++ b/app/src/main/res/layout/fragment_giao_dich.xml
@@ -26,16 +26,14 @@
         android:id="@+id/txtTTNam"
         android:layout_width="0dp"
         android:layout_height="40sp"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="16dp"
         android:gravity="center|center_vertical"
-        android:text="0"
+        android:text="0 đ"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintStart_toStartOf="@+id/txtTTThang"
         app:layout_constraintTop_toBottomOf="@+id/txtHVTGD" />
 
     <TextView
@@ -59,7 +57,6 @@
         android:layout_marginTop="48dp"
         android:layout_marginEnd="16dp"
         android:gravity="center|center_vertical"
-        android:text="0"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
