--- a/app/src/main/res/layout/activity_dang_ky.xml
+++ b/app/src/main/res/layout/activity_dang_ky.xml
@@ -84,6 +84,7 @@
                     android:drawablePadding="12dp"
                     android:ems="10"
                     android:hint="Số điện thoại"
+                    android:inputType="phone"
                     android:paddingStart="12dp"
                     android:paddingEnd="12dp"
                     android:textSize="18sp"
@@ -113,6 +114,7 @@
                         android:background="@drawable/custom_input"
                         android:drawableStart="@drawable/ic_baseline_date_range_24"
                         android:drawablePadding="12dp"
+                        android:editable="false"
                         android:ems="10"
                         android:hint="Ngày sinh"
                         android:paddingStart="12dp"
