--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -1,13 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp">
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="220dp"
-        android:src="@drawable/trangquynh"
-        android:scaleType="centerCrop"
-        android:id="@+id/slide_img_1"/>
+    >
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/slide_img_1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/trangquynh" />
+
+    <TextView
+        android:id="@+id/theloaislide"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="550dp"
+        android:layout_marginRight="10dp"
+        android:background="#171616"
+        android:text="Kinh dị"
+        android:textColor="#FDF9F9"
+        android:textSize="30sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/danhgiaslide"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/theloaislide"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="15dp"
+        android:background="#171616"
+        android:text="9.1"
+        android:textColor="#FDF9F9"
+        android:textSize="30sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/Tuoislide"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/danhgiaslide"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="15dp"
+        android:background="#FFC107"
+        android:text="C16"
+        android:textColor="#FDF9F9"
+        android:textSize="30sp"
+        android:textStyle="bold" />
+
+</RelativeLayout>
