--- a/app/src/main/res/layout/fragment_dangnhap.xml
+++ b/app/src/main/res/layout/fragment_dangnhap.xml
@@ -1,19 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/DangNhap_Fragment_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/p5"
     android:orientation="vertical"
-    android:paddingStart="40dp"
-    android:paddingEnd="40dp"
-    android:id="@+id/DangNhap_Fragment_layout"
+
     tools:context=".MainActivity">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar3"
+        android:layout_width="415dp"
+        android:layout_height="112dp"
+        android:layout_marginEnd="1dp"
+        android:background="@drawable/rap_phim"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -30,9 +44,9 @@
 
                 <EditText
                     android:id="@+id/txtEmailDN"
-                    android:layout_width="0dp"
-                    android:layout_height="60dp"
-                    android:layout_marginTop="80dp"
+                    android:layout_width="329dp"
+                    android:layout_height="42dp"
+                    android:layout_marginTop="180dp"
                     android:background="@drawable/custom_input"
                     android:drawableStart="@drawable/custom_email_icon"
                     android:drawablePadding="12dp"
@@ -43,56 +57,55 @@
                     android:paddingEnd="12dp"
                     android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.612"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <RelativeLayout
                     android:id="@+id/reLayoutDN"
-                    android:layout_width="0dp"
-                    android:layout_height="80dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_width="330dp"
+                    android:layout_height="57dp"
 
+                    android:layout_marginTop="32dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintHorizontal_bias="0.506"
                     app:layout_constraintStart_toStartOf="parent"
-
                     app:layout_constraintTop_toBottomOf="@+id/txtEmailDN">
-                <EditText
-                    android:id="@+id/txtPassDN"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="16dp"
-                    android:background="@drawable/custom_input"
-                    android:drawableStart="@drawable/custom_lock_icon"
-                    android:drawablePadding="12dp"
-                    android:ems="10"
-                    android:hint="Password"
-                    android:inputType="textPassword"
-                    android:paddingStart="12dp"
-                    android:paddingEnd="12dp"
-                    android:textSize="14sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.8"
-                    app:layout_constraintStart_toStartOf="parent"
-                    />
+
+                    <EditText
+                        android:id="@+id/txtPassDN"
+                        android:layout_width="329dp"
+                        android:layout_height="42dp"
+                        android:layout_marginTop="16dp"
+                        android:background="@drawable/custom_input"
+                        android:drawableStart="@drawable/custom_lock_icon"
+                        android:drawablePadding="12dp"
+                        android:ems="10"
+                        android:hint="Password"
+                        android:inputType="textPassword"
+                        android:paddingStart="12dp"
+                        android:paddingEnd="12dp"
+                        android:textSize="14sp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent" />
 
                     <ImageButton
                         android:id="@+id/imgButtonDate"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="20dp"
                         android:layout_alignTop="@+id/txtPassDN"
                         android:layout_alignRight="@+id/txtPassDN"
                         android:layout_alignBottom="@+id/txtPassDN"
-                        android:padding="5dp"
-                        android:src="@drawable/ic_baseline_remove_red_eye_24"
-                        />
+                        android:layout_marginTop="2dp"
+                        android:layout_marginRight="9dp"
+                        android:layout_marginBottom="1dp"
+                        android:background="@drawable/ic_baseline_remove_red_eye_24"
+                        android:padding="5dp" />
                 </RelativeLayout>
 
                 <Button
                     android:id="@+id/btnDK"
                     android:layout_width="260dp"
-                    android:layout_height="49dp"
+                    android:layout_height="42dp"
                     android:layout_marginTop="32dp"
                     android:background="@drawable/custom_button"
 
@@ -108,8 +121,8 @@
 
                 <Button
                     android:id="@+id/btnDN"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_width="329dp"
+                    android:layout_height="42dp"
                     android:layout_marginTop="40dp"
                     android:background="@drawable/custom_button"
                     android:text="Đăng Nhập"
@@ -127,25 +140,15 @@
                     android:layout_marginTop="32dp"
                     android:text="Quên mật khẩu?"
                     android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:textSize="24sp"
+                    android:textColor="@color/black"
+                    android:textSize="22sp"
                     app:layout_constraintTop_toBottomOf="@+id/btnDN"
                     tools:layout_editor_absoluteX="0dp" />
 
-                <TextView
-                    android:id="@+id/textView"
-                    android:layout_width="match_parent"
-                    android:layout_height="120dp"
-                    android:fontFamily="sans-serif-condensed"
-                    android:text="Cinema"
-                    android:textAlignment="center"
-                    android:textColor="@android:color/holo_red_dark"
-                    android:textSize="90dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
+
         </LinearLayout>
     </ScrollView>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
