--- a/app/src/main/res/layout/fragment_thong_tin_nguoi_dung.xml
+++ b/app/src/main/res/layout/fragment_thong_tin_nguoi_dung.xml
@@ -27,7 +27,7 @@
                     android:layout_width="150dp"
                     android:layout_height="165dp"
                     android:layout_marginTop="40dp"
-                    android:scaleType="centerInside"
+                    android:scaleType="centerCrop"
                     android:src="@drawable/admin"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
