--- a/app/src/main/res/layout/activity_thanh_toan.xml
+++ b/app/src/main/res/layout/activity_thanh_toan.xml
@@ -36,6 +36,7 @@
         android:id="@+id/txtChuY"
         android:layout_width="217dp"
         android:layout_height="26dp"
+        android:layout_marginStart="7dp"
         android:layout_marginTop="4dp"
         android:drawableTint="#F40F0F"
         android:textColor="#EF0606"
@@ -51,6 +52,7 @@
         android:id="@+id/txtNgay"
         android:layout_width="217dp"
         android:layout_height="27dp"
+        android:layout_marginStart="7dp"
         android:drawableTint="#F40F0F"
         android:textColor="#958686"
         android:textColorLink="#FFFFFF"
@@ -65,6 +67,7 @@
         android:id="@+id/txtGio"
         android:layout_width="217dp"
         android:layout_height="27dp"
+        android:layout_marginStart="7dp"
         android:drawableTint="#F40F0F"
         android:textColor="#958686"
         android:textColorLink="#FFFFFF"
@@ -79,6 +82,7 @@
         android:id="@+id/txtDiaDiem"
         android:layout_width="217dp"
         android:layout_height="27dp"
+        android:layout_marginStart="7dp"
         android:drawableTint="#F40F0F"
         android:textColor="#958686"
         android:textColorLink="#FFFFFF"
@@ -93,6 +97,7 @@
         android:id="@+id/txtSoGhe"
         android:layout_width="217dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="7dp"
         android:drawableTint="#F40F0F"
         android:textColorLink="#FFFFFF"
         android:textSize="14sp"
@@ -106,6 +111,7 @@
         android:id="@+id/TextView"
         android:layout_width="102dp"
         android:layout_height="27dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="156dp"
         android:drawableTint="#F40F0F"
@@ -123,6 +129,7 @@
         android:id="@+id/textView22"
         android:layout_width="102dp"
         android:layout_height="27dp"
+        android:layout_marginStart="15dp"
         android:drawableTint="#F40F0F"
         android:text="Tổng:"
         android:textColor="#AC8D8D"
@@ -130,7 +137,7 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/txtTien2"
-        app:layout_constraintHorizontal_bias="0.125"
+        app:layout_constraintHorizontal_bias="0.093"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TextView" />
 
@@ -221,8 +228,7 @@
         android:layout_width="360dp"
         android:layout_height="47dp"
         android:layout_marginBottom="16dp"
-        android:background="#F8F5F8"
-        android:backgroundTint="#F10A0A"
+        android:background="@drawable/custom_button"
         android:text="THANH TOÁN"
         android:textColor="#F3ECEC"
         android:textSize="18sp"
