--- a/app/src/main/res/layout/activity_thong_tin_giao_dich.xml
+++ b/app/src/main/res/layout/activity_thong_tin_giao_dich.xml
@@ -188,23 +188,25 @@
 
     <Button
         android:id="@+id/btnXacNhan"
-        android:layout_width="183dp"
-        android:layout_height="54dp"
-        android:layout_marginStart="57dp"
-        android:background="#F80C0C"
+        android:layout_width="138dp"
+        android:layout_height="56dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/custom_button"
         android:text="XÁC NHẬN"
         android:textColor="#F4EFEF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/btnTroVe"
-        app:layout_constraintTop_toBottomOf="@+id/txtTTGDTongTien"
-        app:layout_constraintVertical_bias="0.513" />
+        app:layout_constraintTop_toBottomOf="@+id/txtTTGDTongTien" />
 
     <Button
         android:id="@+id/btnTroVe"
-        android:layout_width="172dp"
-        android:layout_height="50dp"
-        android:background="#F3B705"
+        android:layout_width="138dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="16dp"
+        android:background="@drawable/custom_button"
+        android:backgroundTint="#F3B705"
         android:text="THAY ĐỔI"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
