--- a/app/src/main/res/layout/fragment_trangchu_phimdangchieufragment.xml
+++ b/app/src/main/res/layout/fragment_trangchu_phimdangchieufragment.xml
@@ -11,9 +11,7 @@
     <!-- TODO: Update blank fragment layout -->
 
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -22,7 +20,7 @@
 
             <androidx.viewpager.widget.ViewPager
                 android:layout_width="match_parent"
-                android:layout_height="740dp"
+                android:layout_height="match_parent"
                 android:id="@+id/view_pager_slide"
                 />
 
@@ -38,6 +36,6 @@
 
 
         </LinearLayout>
-    </ScrollView>
+
 
 </LinearLayout>
