--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -17,13 +17,16 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="550dp"
-        android:layout_marginRight="10dp"
-        android:background="#171616"
+        android:layout_marginTop="485dp"
+        android:layout_marginRight="8dp"
+        android:background="#33000000"
+        android:bufferType="normal"
         android:text="Kinh dị"
         android:textColor="#FDF9F9"
         android:textSize="30sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:typeface="normal"
+        android:visibility="visible" />
 
     <TextView
         android:id="@+id/danhgiaslide"
@@ -31,9 +34,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/theloaislide"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="10dp"
         android:layout_marginTop="15dp"
-        android:background="#171616"
+        android:layout_marginRight="10dp"
+        android:background="#33171616"
+        android:drawableStart="@drawable/ic_baseline_star_24"
         android:text="9.1"
         android:textColor="#FDF9F9"
         android:textSize="30sp"
